--- a/styles.css
+++ b/styles.css
@@ -513,3 +513,127 @@ a {
         animation: slide-in2 1s cubic-bezier(.24,.92,.51,1.1) 0s 1 forwards;
       }
   }
+
+
+  @media screen and (max-width: 1025px) {
+      header{
+          justify-content: center;
+      }
+
+      header>ul{
+          margin: 0;
+      }
+
+      .background{
+          align-items: center;
+      }
+
+      .background > h1 {
+          margin: 0;
+          margin-bottom: 4rem;
+      }
+
+      .background > p {
+          margin: 0;
+
+          width: 80%;
+          text-align: center;
+      }
+
+      .projects_parent1{
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+      }
+
+      .left_wrapper{
+          margin: 0;
+      }
+
+      .right_wrapper{
+          margin: 0;
+      }
+
+      .project_wrapper{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+
+      .project{
+          width: 85%;
+          aspect-ratio: 3 / 1;
+          height: auto;
+
+      }
+   }
+
+
+   @media screen and (max-width: 875px) {
+
+    .right_top{
+        font-size: 2vw;
+    }
+
+    .right_bottom{
+        font-size: 2.5vw;
+    }
+
+    .project_left::after{
+        font-size: 2.5vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .projects > h2{
+        font-size: 6vw;
+    }
+
+    .contact_title{
+        font-size: 6vw;
+    }
+
+    .contact_text{
+        font-size: 5vw;
+    }
+   }
+
+
+   @media screen and (max-width: 500px) { 
+    .project{
+        width: 100%;
+        aspect-ratio: 3 / 1;
+    }
+
+    .right_top{
+        font-size: 2.5vw;
+    }
+
+    .right_bottom{
+        font-size: 3vw;
+    }
+
+    .project_left::after{
+        font-size: 3vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    header  > ul {
+        width: 70%;
+    }
+
+   }
+
+
+   @media screen and (max-width: 375px) {
+       header > ul {
+           width: 90%;
+       }
+
+       header > h1 {
+           font-size: 5vw;
+       }
+   }
